ubersetzung von anderen worter

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     background-color: rgba(0,0,0,0.4);
   }
   
-  .modal-contenido {
+  .modal-inhalt {
     background-color: #fff;
     margin: auto;
     padding: 20px;
